Refactoring And Add Some Logics